# VFX-SDK-Samples

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  build_samples.sh
apps/: CMakeLists.txt
apps/AigsEffectApp/: AigsEffectApp.cpp  CMakeLists.txt  README.md  run_aigseffectapp_image.bat.in  run_aigseffectapp_image.sh.in  run_aigseffectapp_webcam.bat.in  run_aigseffectapp_webcam.sh.in
apps/BatchEffectApp/: BatchAigsEffectApp.cpp  BatchDenoiseEffectApp.cpp  BatchEffectApp.cpp  CMakeLists.txt  README.md  run_batchaigseffectapp.bat.in  run_batchaigseffectapp.sh.in  run_batchdenoiseeffectapp.bat.in  run_batchdenoiseeffectapp.sh.in  run_batcheffectapp.bat.in  run_batcheffectapp.sh.in
apps/DenoiseEffectApp/: CMakeLists.txt  DenoiseEffectApp.cpp  README.md  run_denoiseeffectapp.bat.in  run_denoiseeffectapp.sh.in
apps/RelightingEffectApp/: CMakeLists.txt  README.md  RelightingEffectApp.cpp  run_relightingeffectapp.bat.in  run_relightingeffectapp.sh.in  setup_env.sh.in
apps/RelightingTritonClientApp/: CMakeLists.txt  README.md  RelightingTritonClientApp.cpp  run_relightingtritonclientapp.sh.in
apps/TritonClientApp/: CMakeLists.txt  README.md  TritonClientApp.cpp  run_tritonclientapp.sh.in
apps/UpscalePipelineApp/: CMakeLists.txt  README.md  UpscalePipeline.cpp  run_upscalepipelineapp.bat.in  run_upscalepipelineapp.sh.in
apps/VideoEffectsApp/: CMakeLists.txt  README.md  VideoEffectsApp.cpp  run_videoeffectsapp.bat.in  run_videoeffectsapp.sh.in
cmake/: FindTensorRT.cmake  FindVFXSDK.cmake  VersionCheck.cmake
docker/: Dockerfile  README_docker.md  build_docker_image.sh  docker_config.sh  run_docker_image.sh
resources/: Cool.hdr  Cooler.hdr  Default.hdr  Warm.hdr  Warmer.hdr  vkl_cool_01.hdr  vkl_mid.hdr  vkl_warm_01.hdr
utils/: batchUtilities.cpp  batchUtilities.h  nvCVLoggerExamples.cpp  nvCVLoggerExamples.h  nvCVOpenCV.h
